Added sort functions that orients the player cards